--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,6 @@
   <body>
     <div id="root"></div>
 
-    <script
-      src="https://kit.fontawesome.com/3431ce4d0c.js"
-      crossorigin="anonymous"
-    />
+    <script src="https://kit.fontawesome.com/4730127eed.js" crossorigin="anonymous"></script>
   </body>
 </html>
